add back button and full-screen mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Leafit</string>
-    <string name="loading_message">Loading...</string>
+    <string name="loading_message">Loading image details...</string>
 </resources>
